# swapi-rs

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20241019141915_create_and_init_credits_table.sql
src/: main.rs
src/starwars/: credits_loader.rs  data.rs  mod.rs  models.rs  roots.rs
