[package]
name = "swapi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "7.0.11"
async-graphql-axum = "7.0.11"
axum = "0.7.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
slab = "0.4.9"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
